Pass error metrics and specific stacks into DashboardStack